# tidal-scraper

./: .gitignore  README.md  TODO.md  __init__.py  conf.toml  conf.yml  install.sh  objects.py  pyproject.toml  requirements.txt  scrape.py  scrape.sh  scraper.py  tidal_cleanup.py  tidal_scrape.py  todo
tidal-scraper/: account.py  download.py  helper.py  metadata.py  run.py  state.py
tidal_scraper/: cli.py  download.py  helper.py  metadata.py  state.py
